# emrg

./: .gitignore  Agent.md  LICENSE  MANIFESTO.md  README.en.md  README.md  install.sh  pyproject.toml
.github/workflows/: test.yml
docs/design/: compact-resilience.md  evolution-refactor.md  resume-session.md  windows-compatibility.md
emrg/: __init__.py  __main__.py  config.py  connect.py  framing.py  memory.py  protocol.py  session.py
emrg/client/: __init__.py  __main__.py  app.py
emrg/client/python_tui/: __init__.py  buffer.py  events.py  output.py  rich_bridge.py  scrollback.py  terminal.py  viewport.py
emrg/client/python_tui/widgets/: __init__.py  base.py  chat_row.py  (+8 more)
emrg/server/: __init__.py  __main__.py  atomic.py  daemon.py  evolution_prompt.md  git_utils.py  llm.py  scheduler.py  tool_types.py
emrg/skills/: loader.py
emrg/tools/: __init__.py  base.py  bash_tool.py  edit_tool.py  glob_tool.py  grep_tool.py  read_tool.py  registry.py  write_tool.py
scripts/: check_nonlocal.py
tests/: test_app_selector_state.py  test_app_widgets.py  test_atomic.py  test_base_tool.py  test_bash_tool.py  test_buffer.py  test_ci_nonlocal.py  test_config.py  test_conflict_markers.py  test_connect.py  test_daemon.py  test_edit_tool.py  test_framing.py  test_git_utils.py  test_glob_tool.py  test_grep_tool.py  test_imports.py  test_input_parser.py  test_llm.py  test_memory.py  test_memory_reflection.py  test_output.py  test_protocol.py  test_read_tool.py  test_registry.py  test_scheduler.py  test_session.py  test_skills_loader.py  test_tool_types.py  test_write_tool.py
